[gd_scene load_steps=8 format=3 uid="uid://60nvyx6hcw6k"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_7xbh1"]
[ext_resource type="Texture2D" uid="uid://g22icpq7aoi7" path="res://graphics/player_body.png" id="2_qwwgp"]
[ext_resource type="Texture2D" uid="uid://di8e5pfsvxv7u" path="res://graphics/player_turret.png" id="3_cbyhj"]
[ext_resource type="PackedScene" uid="uid://drd2m072phc4v" path="res://scenes/hitbox.tscn" id="4_h6job"]
[ext_resource type="AudioStream" uid="uid://dhnr8wnf2b0ru" path="res://sounds/shoot_by_little_robot_sound_factory.ogg" id="5_manoi"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bs7nj"]
radius = 8.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mxbb2"]
resource_local_to_scene = true
size = Vector2(16, 16)

[node name="Player" type="CharacterBody2D"]
z_index = 3
texture_filter = 1
collision_mask = 6
script = ExtResource("1_7xbh1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_bs7nj")

[node name="Body" type="Sprite2D" parent="."]
self_modulate = Color(0.493545, 0.493546, 0.493546, 1)
texture = ExtResource("2_qwwgp")

[node name="Turret" type="Sprite2D" parent="."]
texture = ExtResource("3_cbyhj")
offset = Vector2(2, 0)

[node name="Muzzle" type="Marker2D" parent="Turret"]
position = Vector2(14, 0)

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Hitbox" parent="." node_paths=PackedStringArray("target") instance=ExtResource("4_h6job")]
collision_layer = 16
collision_mask = 1792
monitorable = false
target = NodePath("..")

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource("RectangleShape2D_mxbb2")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_manoi")

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_exited" from="Hitbox" to="." method="_on_hitbox_area_exited"]

[editable path="Hitbox"]
